--- a/css/style.css
+++ b/css/style.css
@@ -2,52 +2,117 @@
 html,
 body {
     box-sizing: border-box;
-    background-color: lightblue;
+    padding: 0;
+    margin: 0;
 }
+
+body {
+    background-color: lightblue;
+    font-family: sans-serif;
+}
+
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+  }
+  
+  .navbar a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .navbar a.active {
+    color: white;
+  }
 
 .welcome {
     width: 100%;
-}
-
-.picture-div {
-    width: 50%;
-    margin: 0 auto;
-    height: 20vh;
+    height: 100vh;
+    position: relative;
 }
 
 .header-text-div {
     padding: 1rem;
     text-align: center;
-}
-
-.header-text {
-    font-weight: bold;
-    /* letter-spacing: .1rem; */
-    /* font-size: 1.5rem; */
-    /* color: white; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
 }
 
 .projects{
  background-color: black;
  width: 100%;
  color: white;
+ padding: 2rem;
+ display: flex;
 }
 
 .project{
 width: 100%;
+height: 30vh;
+margin-top: 10%;
 text-align: center;
+padding: 1rem;
+letter-spacing: .1rem;
+flex-wrap: wrap;
 }
 
-.project-title{
+#box1 {
+    width: 33.33%;
+}
 
+#box2 {
+    width: 33.33%;
+}
+
+#box3 {
+    width: 33.33%;
+}
+
+@media only screen and (max-width: 600px) {
+    .header-text-div {
+        padding: 2rem;
+    }
 }
 
 .project-link{
   color: white;
   text-decoration: none;
   text-transform: uppercase;
+  display: inline-block;
+  padding: .5rem;
 }
 
 .project-link:hover{
+    text-decoration: underline;
+}
+
+.footer {
+    background-color: white;
+    color: black;
+    padding: 1rem 2rem;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.footer-text a {
+    color: lightblue;
+    text-decoration: none;
+}
+
+.footer-text a:hover {
     text-decoration: underline;
 }
